<resources>
    <string name="app_name">G Shop</string>
    <string name="already_have_an_account_login">Already have an Account? Login</string>
    <string name="join_now">Join Now</string>
    <string name="shop_online">G Shop</string>
    <string name="phone_number">Phone number</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="forget_password">Forget Password?</string>
    <string name="remember_me">Remember me</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="admin_link">Admin Link?</string>
    <string name="add_new_product">Add New Product</string>
    <string name="product_name">Product Name</string>
    <string name="product_description">Product Description</string>
    <string name="product_price">Product Price</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="category">Category</string>
    <string name="settings">Settings</string>
    <string name="user_name">user name</string>
    <string name="tools">Tools</string>
    <string name="cart">Cart</string>
    <string name="orders">Orders</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="price">Price</string>
    <string name="update">Update</string>
    <string name="change_profile">Change Profile</string>
    <string name="full_name">Full Name…</string>
    <string name="address">Address…</string>
    <string name="next">Next</string>
    <string name="total_price">Total Price =</string>
    <string name="product_quantity">Product quantity</string>
    <string name="please_confirm_your_shipment_details">Please confirm your Shipment Details</string>
    <string name="your_name">your name</string>
    <string name="your_phone_number">your phone number</string>
    <string name="your_address">your address</string>
    <string name="confirm">Confirm</string>
    <string name="your_city">your city</string>
    <string name="congratulations_your_final_order_has_been_placed_successfully_soon_you_will_received_your_order_at_your_door_step">Congratulations, your final order has been placed successfully. Soon you will received your order at your door step.</string>
    <string name="check_new_order">Check New Order</string>
    <string name="new_orders">New Orders</string>
    <string name="city">City</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="date_time">Date, Time</string>
    <string name="address_city">Address, City</string>
    <string name="products">Products</string>
    <string name="search">Search</string>
    <string name="maintain_products">Maintain Products</string>
    <string name="change_apply">Change Apply</string>
    <string name="delete_this_product">Delete This Product</string>
    <string name="reset_password">Reset Password</string>
    <string name="seller_registration_form">Seller Registration Form</string>
    <string name="seller_login_form">Seller Login Form</string>
    <string name="title_activity_seller_home">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="add">Add</string>
    <string name="approved">Approved</string>
    <string name="product_state">Product State</string>
    <string name="sellername">Sellername</string>
    <string name="add_image">Add Image</string>
    <string name="choose_category">Choose Category</string>
    <string name="watch">Watch</string>
    <string name="t_shirt">T-Shirt</string>
    <string name="shirt">Shirt</string>
    <string name="online_shop">G Shop</string>
    <string name="change_applied">Change Applied</string>
    <string name="edit_and_change_details">Edit and Change Details</string>
    <string name="order_form">Order Form</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="user_link">User Link?</string>
    <string name="want_to_become_a_seller">Want to become a Seller?</string>
    <string name="upload_image">Upload Image</string>
    <string name="sellers">Sellers</string>
    <string name="_0">0</string>
    <string name="users">Users</string>
    <string name="maintain">Maintain</string>
    <string name="approve">Approve</string>
    <string name="add_new_category">Add New Category</string>
    <string name="details">Details</string>
    <string name="favorites">Favorites</string>
    <string name="refresh">Refresh</string>
    <string name="delivered">Delivered</string>
    <string name="received">Received</string>
    <string name="show_products">Show Products</string>
    <string name="new_product">New Product</string>
    <string name="agent_id">Agent ID</string>
    <string name="show_this_order_products">Show This Order Products</string>
    <string name="about">About</string>
    <string name="communications">Communications</string>
    <string name="order_products">Order Products</string>
    <string name="agent_name">agent_name</string>
    <string name="agents">Agents</string>
    <string name="quantity">Quantity</string>
    <string name="buy_now">Buy Now</string>
    <string name="g_shop">G Shop</string>
    <string name="add_product">Add Product</string>
    <string name="add_category">Add Category</string>
    <string name="email">Email</string>
    <string name="account">Account</string>
</resources>