<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/homeFragment">
    <fragment
        android:id="@+id/homeFragment"
        android:name="com.cu.ecommerce.Fragments.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/cartFragment"
        android:name="com.cu.ecommerce.Fragments.CartFragment"
        android:label="@string/cart"
        tools:layout="@layout/fragment_cart" />
    <fragment
        android:id="@+id/orderFragment"
        android:name="com.cu.ecommerce.Fragments.OrderFragment"
        android:label="@string/orders"
        tools:layout="@layout/fragment_orders" />
    <fragment
        android:id="@+id/categoryFragment"
        android:name="com.cu.ecommerce.Fragments.CategoryFragment"
        android:label="@string/category"
        tools:layout="@layout/fragment_category" />
    <fragment
        android:id="@+id/settingFragment"
        android:name="com.cu.ecommerce.Fragments.SettingFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_setting" />
</navigation>