<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".Buyers.RegisterActivity">
    <View
        android:layout_width="match_parent"
        android:layout_height="100dp"/>
    <TextView
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/online_shop"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:textSize="30sp"
        android:gravity="center_horizontal" />
    <View
        android:layout_width="match_parent"
        android:layout_height="20dp"/>

    <ImageView
        android:src="@drawable/shopping_cart"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:tint="@color/colorPrimary"
        android:contentDescription="@string/app_name" />
    <View
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp"/>

    <EditText
        android:id="@+id/name"
        android:inputType="text"
        android:padding="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/corner_border_background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:textColor="@color/colorTextPrimary"
        android:textSize="16sp"
        android:autofillHints="" />
    <EditText
        android:id="@+id/phone"
        android:inputType="phone"
        android:padding="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/corner_border_background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/phone_number"
        android:textColor="@color/colorTextPrimary"
        android:textSize="16sp"
        android:autofillHints="" />
    <EditText
        android:id="@+id/password"
        android:inputType="textPassword"
        android:padding="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/corner_border_background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:textColor="@color/colorTextPrimary"
        android:textSize="16sp"
        android:autofillHints="" />

    <Button
        android:id="@+id/register"
        android:padding="15dp"
        android:layout_margin="15dp"
        android:backgroundTint="@color/colorPrimary"
        android:background="@drawable/corner_solid_background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:text="@string/register"
        android:textColor="@color/colorWhite"
        android:textSize="17sp"
        tools:ignore="UnusedAttribute" />

</LinearLayout>