<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".Activities.LoginActivity">
    <View
        android:layout_width="match_parent"
        android:layout_height="20dp"/>
    <TextView
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/shop_online"
        android:textColor="@color/colorTextPrimary"
        android:textSize="30sp"
        android:gravity="center_horizontal" />
    <View
        android:layout_width="match_parent"
        android:layout_height="20dp"/>

    <ImageView
        android:src="@drawable/shopping_cart"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:tint="@color/colorPrimary" />
    <View
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp"/>

    <EditText
        android:id="@+id/phone"
        android:inputType="phone"
        android:padding="20dp"
        android:layout_margin="10dp"
        android:background="@drawable/corner_border_background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/phone_number"
        android:textColor="@color/colorTextPrimary"
        android:textSize="16sp"/>
    <EditText
        android:id="@+id/password"
        android:inputType="textPassword"
        android:padding="20dp"
        android:layout_margin="10dp"
        android:background="@drawable/corner_border_background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:textColor="@color/colorTextPrimary"
        android:textSize="16sp"/>
    <LinearLayout
        android:layout_margin="15dp"
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <CheckBox
            android:id="@+id/rememberMe"
            android:inputType="textPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/remember_me"
            android:textColor="@color/colorTextPrimary"
            android:textSize="16sp"/>
        <View
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="10dp"/>
        <TextView
            android:id="@+id/forgetPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forget_password"
            android:textColor="@color/colorTextPrimary"
            android:textSize="16sp"/>

    </LinearLayout>

    <Button
        android:id="@+id/login"
        android:padding="17dp"
        android:layout_margin="15dp"
        android:background="@drawable/corner_solid_background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:text="@string/login"
        android:textColor="@color/colorWhite"
        android:textSize="20sp"/>
    <LinearLayout
        android:layout_margin="15dp"
        android:gravity="right"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/adminLink"
            android:textSize="16sp"
            android:textColor="@color/colorTextPrimary"
            android:text="@string/admin_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:visibility="gone"
            android:id="@+id/notAdminLink"
            android:textSize="16sp"
            android:textColor="@color/colorTextPrimary"
            android:text="@string/admin_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</LinearLayout>