<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Sellers.SellerSettingsActivity">
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/setting_profile_image"
        android:layout_margin="15dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/ic_launcher_background"
        android:layout_width="130dp"
        android:layout_height="130dp"/>
    <TextView
        android:id="@+id/setting_image_change"
        android:layout_gravity="center_horizontal"
        android:textStyle="bold"
        android:textColor="@color/colorTextPrimary"
        android:text="@string/change_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/setting_phone_number"
        android:background="@drawable/corner_border_background"
        android:textColor="@color/colorTextPrimary"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp"
        android:padding="15dp"
        android:hint="@string/phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/setting_full_name"
        android:background="@drawable/corner_border_background"
        android:textColor="@color/colorTextPrimary"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp"
        android:padding="15dp"
        android:hint="@string/full_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/setting_address"
        android:background="@drawable/corner_border_background"
        android:textColor="@color/colorTextPrimary"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp"
        android:padding="15dp"
        android:hint="@string/address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <View
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/update"
        android:layout_margin="15dp"
        android:background="@drawable/corner_solid_background"
        android:textColor="@color/colorWhite"
        android:textStyle="bold"
        android:textSize="17sp"
        android:text="@string/update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</LinearLayout>