<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:id="@+id/layout"
        android:orientation="vertical"
        android:padding="20dp"
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/name"
                android:textSize="16sp"
                android:textColor="@color/colorWhite"
                android:text="@string/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <View
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="10dp"/>
            <TextView
                android:id="@+id/phone"
                android:textSize="16sp"
                android:textColor="@color/colorWhite"
                android:text="@string/phone_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <TextView
            android:id="@+id/price"
            android:padding="10dp"
            android:layout_gravity="center"
            android:textSize="16sp"
            android:textColor="@color/colorWhite"
            android:text="@string/price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/address_city"
            android:padding="10dp"
            android:layout_gravity="center"
            android:textSize="16sp"
            android:textColor="@color/colorWhite"
            android:text="@string/address_city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/date_time"
            android:padding="10dp"
            android:layout_gravity="center"
            android:textSize="16sp"
            android:textColor="@color/colorWhite"
            android:text="@string/date_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/show_all_products"
            android:textAllCaps="false"
            android:padding="10dp"
            android:layout_gravity="center"
            android:textSize="16sp"
            android:background="@color/colorWhite"
            android:textColor="@color/colorPrimary"
            android:text="Show This Order Products"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</androidx.cardview.widget.CardView>