<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Admin.AdminMaintainProductActivity">
    <ImageView
        android:id="@+id/imageM"
        android:scaleType="centerCrop"
        android:layout_width="match_parent"
        android:layout_height="300dp"/>
    <EditText
        android:id="@+id/nameM"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        android:background="@drawable/corner_border_background"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/colorTextPrimary"
        android:hint="@string/product_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/descriptionM"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        android:background="@drawable/corner_border_background"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/colorTextPrimary"
        android:hint="@string/product_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/priceM"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        android:background="@drawable/corner_border_background"
        android:textSize="15sp"
        android:textStyle="bold"
        android:textColor="@color/colorTextPrimary"
        android:hint="@string/product_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>
    <TextView
        android:id="@+id/update_btn"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        android:background="@drawable/corner_solid_background"
        android:textSize="18sp"
        android:textStyle="bold"
        android:gravity="center_horizontal"
        android:textColor="@color/colorWhite"
        android:text="@string/change_apply"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/delete_btn"
        android:layout_margin="20dp"
        android:padding="10dp"
        android:background="@drawable/corner_solid_background"
        android:textSize="18sp"
        android:textStyle="bold"
        android:gravity="center_horizontal"
        android:textColor="@color/colorWhite"
        android:text="@string/delete_this_product"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>