<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:orientation="horizontal"
        android:paddingTop="20dp"
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:padding="20dp"
            android:textSize="20sp"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"
            android:text="@string/delivered"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <LinearLayout
            android:padding="10dp"
            android:gravity="center_vertical"
            android:background="@color/colorPrimary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/state"
                android:textSize="18sp"
                android:textColor="@color/colorWhite"
                android:text="@string/delivered"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <ImageView
                android:src="@drawable/info_24"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:tint="@color/colorWhite" />
        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/layout"
        android:orientation="vertical"
        android:padding="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/agentID"
            android:textSize="17sp"
            android:textStyle="bold"
            android:textColor="@color/colorTextPrimary"
            android:text="@string/agent_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <View
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorBottomBar"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/name"
                android:textSize="16sp"
                android:textColor="@color/colorTextPrimary"
                android:text="@string/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <View
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="10dp"/>
            <TextView
                android:id="@+id/phone"
                android:textSize="16sp"
                android:textColor="@color/colorTextPrimary"
                android:text="@string/phone_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <TextView
            android:id="@+id/price"
            android:paddingTop="10dp"
            android:textSize="16sp"
            android:textColor="@color/colorTextPrimary"
            android:text="@string/price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/address_city"
            android:paddingTop="10dp"
            android:textSize="16sp"
            android:textColor="@color/colorTextPrimary"
            android:text="@string/address_city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/date_time"
            android:paddingTop="10dp"
            android:textSize="16sp"
            android:textColor="@color/colorTextPrimary"
            android:text="@string/date_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <View
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorBottomBar"/>

    <TextView
        android:id="@+id/show_all_products"
        android:textAllCaps="false"
        android:padding="15dp"
        android:gravity="center"
        android:textSize="18sp"
        android:background="?selectableItemBackground"
        android:textColor="@color/colorPrimary"
        android:text="@string/show_this_order_products"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <LinearLayout
        android:id="@+id/receive"
        android:padding="10dp"
        android:orientation="vertical"
        android:background="?selectableItemBackgroundBorderless"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <ImageView
            android:src="@drawable/receipt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:tint="@color/colorAccent" />
        <TextView
            android:textSize="20sp"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"
            android:gravity="center"
            android:text="Sign"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="@color/colorBottomBar"/>

</LinearLayout>
